enum AddFeedAccessibilityIdentifiers {
    static let urlInput = "add_feed_url_input"
    static let saveButton = "add_feed_save_button"
    static let categorySelector = "edit_feed_category_selector"
}
