...
        id = "1",
        url = "https://www.site2.com",
        title = "Site 2",
        lastSyncTimestamp = null,
        category = FeedSourceCategory(
            id = "1",
            title = "News",
        ),
        logoUrl = null,
        websiteUrl = null,
        isHiddenFromTimeline = false,
        articleOpenMode = ArticleOpenMode.DEFAULT,
        isPinned = false,
...
